# 1.06 11-5-2008
>Waves are now in phase after using a single pulse

10-13-2008: [811] use PhetApplicationConfig
1.05.02
Trial version with particles in every cell

1.05.02
Trial version with particles in every 2 cells

1.05.00 (5-7-08)
Same as 1.04.01, to pick up translation fixes in PhetDefaultFont.

New in 1.04.01 (4-28-08)
Picked up fixes in PhetDefaultFont


10-5-2007: reduced padding between components to remove scrollbars at 1024x768
10-5-2007: reduced barrier thickness
10-5-2007: reduced graph size slightly
10-5-2007: added option to maximize/minimize wave graphic

New in 1.01 (9-25-2006)
Posted on main site.

New in 1.00.02 (9-21-2006)
Changed "Up" to "This End Up"

New in 1.00.01 (8-23-2006) 
Rearrange the controls so that the option of one or two drips/speakers/lights is before the Barrier options.  This way on a low resolution screen the tops of the controls can be seen and a user will not miss options. In the Sound panel the Audio box will move up with the one or two speaker controls.
Added Reset All.
Detector crosshairs can no longer attach to the body of the intensity display.
Added a graphic to signify rotation.
Made drop size proportional to wave amplitudue.
Reverted to grayscale as default for sound module (instead of particle view).
Added a checkbox that allows the user to mark the particles.
Moved sound graphic view type to the play area.
Altered lattice shape for damping in light module to discourage interference at the screen at the right side.
Switched to system L&F (no more Ocean)

New in 0.00.21 (5-25-2006)
Sound Module: Changed time unit to microsec.

New in 0.00.20 (5-24-2006)
Moved the option to make e-field vectors & curve black from the play area to a menu.

New in 0.00.19 (5-24-2006)
Connected pipe to middle of faucet.
Reduced speaker size & source controls at low window size.
Shrank wire to photon source.
Light Module:
    Lightened the default red for photon view.
    Screen is now hidden on rotation.